// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form component Populates data from props 1`] = `
<div>
  <Form
    inline={false}
  >
    <FormGroup>
      <FormLabel
        column={false}
        srOnly={false}
      >
        Name
      </FormLabel>
      <FormControl
        id="formnamefield"
        onChange={[Function]}
        type="text"
      />
    </FormGroup>
    <FormGroup>
      <FormLabel
        column={false}
        srOnly={false}
      >
        Choose a fruit
      </FormLabel>
      <select
        className="form-control"
        id="formfruitfield"
        onChange={[Function]}
      >
        <option>
          Apple
        </option>
        <option>
          Banana
        </option>
        <option>
          Pear
        </option>
        <option>
          Orange
        </option>
        <option>
          Grape
        </option>
      </select>
    </FormGroup>
    <div>
      <FormLabel
        column={false}
        srOnly={false}
      >
        Which country do you like the most?
      </FormLabel>
      <FormCheck
        disabled={false}
        id="formcountryfield0"
        inline={false}
        isInvalid={false}
        isValid={false}
        label="UK"
        name={2}
        onChange={[Function]}
        title=""
        type="radio"
      />
      <FormCheck
        disabled={false}
        id="formcountryfield1"
        inline={false}
        isInvalid={false}
        isValid={false}
        label="Germany"
        name={2}
        onChange={[Function]}
        title=""
        type="radio"
      />
      <FormCheck
        disabled={false}
        id="formcountryfield2"
        inline={false}
        isInvalid={false}
        isValid={false}
        label="Russia"
        name={2}
        onChange={[Function]}
        title=""
        type="radio"
      />
      <FormCheck
        disabled={false}
        id="formcountryfield3"
        inline={false}
        isInvalid={false}
        isValid={false}
        label="USA"
        name={2}
        onChange={[Function]}
        title=""
        type="radio"
      />
    </div>
    <div>
      <FormLabel
        column={false}
        srOnly={false}
      >
        Which animals are cool?
      </FormLabel>
      <FormCheck
        disabled={false}
        id="formanimalfield0"
        inline={false}
        isInvalid={false}
        isValid={false}
        label="Tigers"
        name={3}
        onClick={[Function]}
        title=""
        type="checkbox"
      />
      <FormCheck
        disabled={false}
        id="formanimalfield1"
        inline={false}
        isInvalid={false}
        isValid={false}
        label="Penguins"
        name={3}
        onClick={[Function]}
        title=""
        type="checkbox"
      />
      <FormCheck
        disabled={false}
        id="formanimalfield2"
        inline={false}
        isInvalid={false}
        isValid={false}
        label="Gorillas"
        name={3}
        onClick={[Function]}
        title=""
        type="checkbox"
      />
      <FormCheck
        disabled={false}
        id="formanimalfield3"
        inline={false}
        isInvalid={false}
        isValid={false}
        label="Wolves"
        name={3}
        onClick={[Function]}
        title=""
        type="checkbox"
      />
    </div>
    <hr />
    <Button
      active={false}
      disabled={false}
      onClick={[Function]}
      type="button"
      variant="primary"
    >
      Submit
    </Button>
  </Form>
</div>
`;

exports[`Form component renders 1`] = `
<div
  style={
    Object {
      "padding": "2vh",
    }
  }
>
  <Form
    inline={false}
  >
    <FormGroup>
      <FormLabel
        column={false}
        srOnly={false}
      >
        Name
      </FormLabel>
      <FormControl
        id="formnamefield"
        type="text"
      />
    </FormGroup>
    <FormGroup>
      <FormLabel
        column={false}
        srOnly={false}
      >
        Choose a fruit
      </FormLabel>
      <select
        class="form-control"
        id="formfruitfield"
      >
        <option>
          Apple
        </option>
        <option>
          Banana
        </option>
        <option>
          Pear
        </option>
        <option>
          Orange
        </option>
        <option>
          Grape
        </option>
      </select>
    </FormGroup>
    <div>
      <FormLabel
        column={false}
        srOnly={false}
      >
        Which country do you like the most?
      </FormLabel>
      <FormCheck
        disabled={false}
        id="formcountryfield0"
        inline={false}
        isInvalid={false}
        isValid={false}
        label="UK"
        name="2"
        title=""
        type="radio"
      />
      <FormCheck
        disabled={false}
        id="formcountryfield1"
        inline={false}
        isInvalid={false}
        isValid={false}
        label="Germany"
        name="2"
        title=""
        type="radio"
      />
      <FormCheck
        disabled={false}
        id="formcountryfield2"
        inline={false}
        isInvalid={false}
        isValid={false}
        label="Russia"
        name="2"
        title=""
        type="radio"
      />
      <FormCheck
        disabled={false}
        id="formcountryfield3"
        inline={false}
        isInvalid={false}
        isValid={false}
        label="USA"
        name="2"
        title=""
        type="radio"
      />
    </div>
    <div>
      <FormLabel
        column={false}
        srOnly={false}
      >
        Which animals are cool?
      </FormLabel>
      <FormCheck
        disabled={false}
        id="formanimalfield0"
        inline={false}
        isInvalid={false}
        isValid={false}
        label="Tigers"
        name="3"
        title=""
        type="checkbox"
      />
      <FormCheck
        disabled={false}
        id="formanimalfield1"
        inline={false}
        isInvalid={false}
        isValid={false}
        label="Penguins"
        name="3"
        title=""
        type="checkbox"
      />
      <FormCheck
        disabled={false}
        id="formanimalfield2"
        inline={false}
        isInvalid={false}
        isValid={false}
        label="Gorrillas"
        name="3"
        title=""
        type="checkbox"
      />
      <FormCheck
        disabled={false}
        id="formanimalfield3"
        inline={false}
        isInvalid={false}
        isValid={false}
        label="Wolves"
        name="3"
        title=""
        type="checkbox"
      />
    </div>
    <Button
      active={false}
      disabled={false}
      type="submit"
      variant="primary"
    >
      Submit
    </Button>
  </Form>
  <hr />
</div>
`;
